CHTL/generated/chtl/grammar/CHTLParser.cpp

// Generated from grammar/CHTL.g4 by ANTLR 4.13.1


#include "CHTLListener.h"
#include "CHTLVisitor.h"

#include "CHTLParser.h"


using namespace antlrcpp;
using namespace chtl.antlr;

using namespace antlr4;

namespace {

struct CHTLParserStaticData final {
  CHTLParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  CHTLParserStaticData(const CHTLParserStaticData&) = delete;
  CHTLParserStaticData(CHTLParserStaticData&&) = delete;
  CHTLParserStaticData& operator=(const CHTLParserStaticData&) = delete;
  CHTLParserStaticData& operator=(CHTLParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag chtlParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
CHTLParserStaticData *chtlParserStaticData = nullptr;

void chtlParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (chtlParserStaticData != nullptr) {
    return;
  }
#else
  assert(chtlParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<CHTLParserStaticData>(
    std::vector<std::string>{
      "program", "element", "htmlElement", "textElement", "styleElement", 
      "scriptElement", "attributes", "attribute", "value", "block", "text", 
      "template", "templateType", "custom", "customType", "origin", "originType", 
      "importStatement", "importType", "path", "namespace", "configuration", 
      "useStatement", "comment", "expression", "term", "functionCall", "propertyAccess", 
      "indexAccess", "operator"
    },
    std::vector<std::string>{
      "", "'[Template]'", "'[Custom]'", "'[Origin]'", "'[Import]'", "'[Namespace]'", 
      "'[Configuration]'", "'[Info]'", "'[Export]'", "'text'", "'style'", 
      "'script'", "'use'", "'except'", "'delete'", "'insert'", "'inherit'", 
      "'from'", "'as'", "'fileloader'", "'listen'", "'delegate'", "'animate'", 
      "'vir'", "'router'", "'util'", "'iNeverAway'", "'after'", "'before'", 
      "'replace'", "'at top'", "'at bottom'", "'HTML'", "'CSS'", "'JavaScript'", 
      "'Vue'", "'HTML5'", "'{'", "'}'", "'['", "']'", "'('", "')'", "';'", 
      "','", "'.'", "':'", "'='", "'+'", "'-'", "'*'", "'/'", "'%'", "'&&'", 
      "'||'", "", "'>'", "'<'", "'>='", "'<='", "'=='", "'!='", "'@'", "'#'", 
      "'$'", "'\\u003F'", "", "'&'", "'|'", "'~'", "'^'", "'->'"
    },
    std::vector<std::string>{
      "", "TEMPLATE", "CUSTOM", "ORIGIN", "IMPORT", "NAMESPACE", "CONFIGURATION", 
      "INFO", "EXPORT", "TEXT", "STYLE", "SCRIPT", "USE", "EXCEPT", "DELETE", 
      "INSERT", "INHERIT", "FROM", "AS", "FILELOADER", "LISTEN", "DELEGATE", 
      "ANIMATE", "VIR", "ROUTER", "UTIL", "INEVERAWAY", "AFTER", "BEFORE", 
      "REPLACE", "AT_TOP", "AT_BOTTOM", "HTML", "CSS", "JAVASCRIPT", "VUE", 
      "HTML5", "LEFT_BRACE", "RIGHT_BRACE", "LEFT_BRACKET", "RIGHT_BRACKET", 
      "LEFT_PAREN", "RIGHT_PAREN", "SEMICOLON", "COMMA", "DOT", "COLON", 
      "EQUAL", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "MODULO", "AND", "OR", 
      "NOT", "GREATER", "LESS", "GREATER_EQUAL", "LESS_EQUAL", "EQUAL_EQUAL", 
      "NOT_EQUAL", "AT", "HASH", "DOLLAR", "QUESTION", "EXCLAMATION", "AMPERSAND", 
      "PIPE", "TILDE", "CARET", "ARROW", "STRING", "UNQUOTED_LITERAL", "NUMBER", 
      "IDENTIFIER", "COMMENT", "GENERATOR_COMMENT", "MULTILINE_COMMENT", 
      "WHITESPACE", "TEXT_CONTENT", "ELEMENT", "VAR"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  chtlParserStaticData = staticData.release();
}

}

CHTLParser::CHTLParser(TokenStream *input) : CHTLParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

CHTLParser::CHTLParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  CHTLParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *chtlParserStaticData->atn, chtlParserStaticData->decisionToDFA, chtlParserStaticData->sharedContextCache, options);
}

CHTLParser::~CHTLParser() {
  delete _interpreter;
}

const atn::ATN& CHTLParser::getATN() const {
  return *chtlParserStaticData->atn;
}

std::string CHTLParser::getGrammarFileName() const {
  return "CHTL.g4";
}

const std::vector<std::string>& CHTLParser::getRuleNames() const {
  return chtlParserStaticData->ruleNames;
}

const dfa::Vocabulary& CHTLParser::getVocabulary() const {
  return chtlParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView CHTLParser::getSerializedATN() const {
  return chtlParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

CHTLParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CHTLParser::ProgramContext::EOF() {
  return getToken(CHTLParser::EOF, 0);
}

std::vector<CHTLParser::ElementContext *> CHTLParser::ProgramContext::element() {
  return getRuleContexts<CHTLParser::ElementContext>();
}

CHTLParser::ElementContext* CHTLParser::ProgramContext::element(size_t i) {
  return getRuleContext<CHTLParser::ElementContext>(i);
}

std::vector<CHTLParser::TemplateContext *> CHTLParser::ProgramContext::template_() {
  return getRuleContexts<CHTLParser::TemplateContext>();
}

CHTLParser::TemplateContext* CHTLParser::ProgramContext::template_(size_t i) {
  return getRuleContext<CHTLParser::TemplateContext>(i);
}

std::vector<CHTLParser::CustomContext *> CHTLParser::ProgramContext::custom() {
  return getRuleContexts<CHTLParser::CustomContext>();
}

CHTLParser::CustomContext* CHTLParser::ProgramContext::custom(size_t i) {
  return getRuleContext<CHTLParser::CustomContext>(i);
}

std::vector<CHTLParser::OriginContext *> CHTLParser::ProgramContext::origin() {
  return getRuleContexts<CHTLParser::OriginContext>();
}

CHTLParser::OriginContext* CHTLParser::ProgramContext::origin(size_t i) {
  return getRuleContext<CHTLParser::OriginContext>(i);
}

std::vector<CHTLParser::ImportStatementContext *> CHTLParser::ProgramContext::importStatement() {
  return getRuleContexts<CHTLParser::ImportStatementContext>();
}

CHTLParser::ImportStatementContext* CHTLParser::ProgramContext::importStatement(size_t i) {
  return getRuleContext<CHTLParser::ImportStatementContext>(i);
}

std::vector<CHTLParser::NamespaceContext *> CHTLParser::ProgramContext::namespace_() {
  return getRuleContexts<CHTLParser::NamespaceContext>();
}

CHTLParser::NamespaceContext* CHTLParser::ProgramContext::namespace_(size_t i) {
  return getRuleContext<CHTLParser::NamespaceContext>(i);
}

std::vector<CHTLParser::ConfigurationContext *> CHTLParser::ProgramContext::configuration() {
  return getRuleContexts<CHTLParser::ConfigurationContext>();
}

CHTLParser::ConfigurationContext* CHTLParser::ProgramContext::configuration(size_t i) {
  return getRuleContext<CHTLParser::ConfigurationContext>(i);
}

std::vector<CHTLParser::UseStatementContext *> CHTLParser::ProgramContext::useStatement() {
  return getRuleContexts<CHTLParser::UseStatementContext>();
}

CHTLParser::UseStatementContext* CHTLParser::ProgramContext::useStatement(size_t i) {
  return getRuleContext<CHTLParser::UseStatementContext>(i);
}

std::vector<CHTLParser::CommentContext *> CHTLParser::ProgramContext::comment() {
  return getRuleContexts<CHTLParser::CommentContext>();
}

CHTLParser::CommentContext* CHTLParser::ProgramContext::comment(size_t i) {
  return getRuleContext<CHTLParser::CommentContext>(i);
}


size_t CHTLParser::ProgramContext::getRuleIndex() const {
  return CHTLParser::RuleProgram;
}

void CHTLParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void CHTLParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any CHTLParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTLVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

CHTLParser::ProgramContext* CHTLParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, CHTLParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(71);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 7806) != 0) || ((((_la - 75) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 75)) & 7) != 0)) {
      setState(69);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case CHTLParser::TEXT:
        case CHTLParser::STYLE:
        case CHTLParser::SCRIPT:
        case CHTLParser::IDENTIFIER: {
          setState(60);
          element();
          break;
        }

        case CHTLParser::TEMPLATE: {
          setState(61);
          template_();
          break;
        }

        case CHTLParser::CUSTOM: {
          setState(62);
          custom();
          break;
        }

        case CHTLParser::ORIGIN: {
          setState(63);
          origin();
          break;
        }

        case CHTLParser::IMPORT: {
          setState(64);
          importStatement();
          break;
        }

        case CHTLParser::NAMESPACE: {
          setState(65);
          namespace_();
          break;
        }

        case CHTLParser::CONFIGURATION: {
          setState(66);
          configuration();
          break;
        }

        case CHTLParser::USE: {
          setState(67);
          useStatement();
          break;
        }

        case CHTLParser::COMMENT:
        case CHTLParser::GENERATOR_COMMENT: {
          setState(68);
          comment();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(73);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(74);
    match(CHTLParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ElementContext ------------------------------------------------------------------

CHTLParser::ElementContext::ElementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CHTLParser::HtmlElementContext* CHTLParser::ElementContext::htmlElement() {
  return getRuleContext<CHTLParser::HtmlElementContext>(0);
}

CHTLParser::TextElementContext* CHTLParser::ElementContext::textElement() {
  return getRuleContext<CHTLParser::TextElementContext>(0);
}

CHTLParser::StyleElementContext* CHTLParser::ElementContext::styleElement() {
  return getRuleContext<CHTLParser::StyleElementContext>(0);
}

CHTLParser::ScriptElementContext* CHTLParser::ElementContext::scriptElement() {
  return getRuleContext<CHTLParser::ScriptElementContext>(0);
}


size_t CHTLParser::ElementContext::getRuleIndex() const {
  return CHTLParser::RuleElement;
}

void CHTLParser::ElementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterElement(this);
}

void CHTLParser::ElementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitElement(this);
}


std::any CHTLParser::ElementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTLVisitor*>(visitor))
    return parserVisitor->visitElement(this);
  else
    return visitor->visitChildren(this);
}

CHTLParser::ElementContext* CHTLParser::element() {
  ElementContext *_localctx = _tracker.createInstance<ElementContext>(_ctx, getState());
  enterRule(_localctx, 2, CHTLParser::RuleElement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(80);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CHTLParser::IDENTIFIER: {
        enterOuterAlt(_localctx, 1);
        setState(76);
        htmlElement();
        break;
      }

      case CHTLParser::TEXT: {
        enterOuterAlt(_localctx, 2);
        setState(77);
        textElement();
        break;
      }

      case CHTLParser::STYLE: {
        enterOuterAlt(_localctx, 3);
        setState(78);
        styleElement();
        break;
      }

      case CHTLParser::SCRIPT: {
        enterOuterAlt(_localctx, 4);
        setState(79);
        scriptElement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- HtmlElementContext ------------------------------------------------------------------

CHTLParser::HtmlElementContext::HtmlElementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CHTLParser::HtmlElementContext::IDENTIFIER() {
  return getToken(CHTLParser::IDENTIFIER, 0);
}

CHTLParser::AttributesContext* CHTLParser::HtmlElementContext::attributes() {
  return getRuleContext<CHTLParser::AttributesContext>(0);
}

CHTLParser::BlockContext* CHTLParser::HtmlElementContext::block() {
  return getRuleContext<CHTLParser::BlockContext>(0);
}


size_t CHTLParser::HtmlElementContext::getRuleIndex() const {
  return CHTLParser::RuleHtmlElement;
}

void CHTLParser::HtmlElementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterHtmlElement(this);
}

void CHTLParser::HtmlElementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitHtmlElement(this);
}


std::any CHTLParser::HtmlElementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTLVisitor*>(visitor))
    return parserVisitor->visitHtmlElement(this);
  else
    return visitor->visitChildren(this);
}

CHTLParser::HtmlElementContext* CHTLParser::htmlElement() {
  HtmlElementContext *_localctx = _tracker.createInstance<HtmlElementContext>(_ctx, getState());
  enterRule(_localctx, 4, CHTLParser::RuleHtmlElement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82);
    match(CHTLParser::IDENTIFIER);
    setState(84);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      setState(83);
      attributes();
      break;
    }

    default:
      break;
    }
    setState(87);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CHTLParser::LEFT_BRACE) {
      setState(86);
      block();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TextElementContext ------------------------------------------------------------------

CHTLParser::TextElementContext::TextElementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CHTLParser::TextElementContext::TEXT() {
  return getToken(CHTLParser::TEXT, 0);
}

CHTLParser::BlockContext* CHTLParser::TextElementContext::block() {
  return getRuleContext<CHTLParser::BlockContext>(0);
}


size_t CHTLParser::TextElementContext::getRuleIndex() const {
  return CHTLParser::RuleTextElement;
}

void CHTLParser::TextElementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTextElement(this);
}

void CHTLParser::TextElementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTextElement(this);
}


std::any CHTLParser::TextElementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTLVisitor*>(visitor))
    return parserVisitor->visitTextElement(this);
  else
    return visitor->visitChildren(this);
}

CHTLParser::TextElementContext* CHTLParser::textElement() {
  TextElementContext *_localctx = _tracker.createInstance<TextElementContext>(_ctx, getState());
  enterRule(_localctx, 6, CHTLParser::RuleTextElement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(89);
    match(CHTLParser::TEXT);
    setState(90);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StyleElementContext ------------------------------------------------------------------

CHTLParser::StyleElementContext::StyleElementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CHTLParser::StyleElementContext::STYLE() {
  return getToken(CHTLParser::STYLE, 0);
}

CHTLParser::BlockContext* CHTLParser::StyleElementContext::block() {
  return getRuleContext<CHTLParser::BlockContext>(0);
}


size_t CHTLParser::StyleElementContext::getRuleIndex() const {
  return CHTLParser::RuleStyleElement;
}

void CHTLParser::StyleElementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStyleElement(this);
}

void CHTLParser::StyleElementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStyleElement(this);
}


std::any CHTLParser::StyleElementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTLVisitor*>(visitor))
    return parserVisitor->visitStyleElement(this);
  else
    return visitor->visitChildren(this);
}

CHTLParser::StyleElementContext* CHTLParser::styleElement() {
  StyleElementContext *_localctx = _tracker.createInstance<StyleElementContext>(_ctx, getState());
  enterRule(_localctx, 8, CHTLParser::RuleStyleElement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(92);
    match(CHTLParser::STYLE);
    setState(93);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ScriptElementContext ------------------------------------------------------------------

CHTLParser::ScriptElementContext::ScriptElementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CHTLParser::ScriptElementContext::SCRIPT() {
  return getToken(CHTLParser::SCRIPT, 0);
}

CHTLParser::BlockContext* CHTLParser::ScriptElementContext::block() {
  return getRuleContext<CHTLParser::BlockContext>(0);
}


size_t CHTLParser::ScriptElementContext::getRuleIndex() const {
  return CHTLParser::RuleScriptElement;
}

void CHTLParser::ScriptElementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterScriptElement(this);
}

void CHTLParser::ScriptElementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitScriptElement(this);
}


std::any CHTLParser::ScriptElementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTLVisitor*>(visitor))
    return parserVisitor->visitScriptElement(this);
  else
    return visitor->visitChildren(this);
}

CHTLParser::ScriptElementContext* CHTLParser::scriptElement() {
  ScriptElementContext *_localctx = _tracker.createInstance<ScriptElementContext>(_ctx, getState());
  enterRule(_localctx, 10, CHTLParser::RuleScriptElement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(95);
    match(CHTLParser::SCRIPT);
    setState(96);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AttributesContext ------------------------------------------------------------------

CHTLParser::AttributesContext::AttributesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CHTLParser::AttributeContext *> CHTLParser::AttributesContext::attribute() {
  return getRuleContexts<CHTLParser::AttributeContext>();
}

CHTLParser::AttributeContext* CHTLParser::AttributesContext::attribute(size_t i) {
  return getRuleContext<CHTLParser::AttributeContext>(i);
}


size_t CHTLParser::AttributesContext::getRuleIndex() const {
  return CHTLParser::RuleAttributes;
}

void CHTLParser::AttributesContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAttributes(this);
}

void CHTLParser::AttributesContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAttributes(this);
}


std::any CHTLParser::AttributesContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTLVisitor*>(visitor))
    return parserVisitor->visitAttributes(this);
  else
    return visitor->visitChildren(this);
}

CHTLParser::AttributesContext* CHTLParser::attributes() {
  AttributesContext *_localctx = _tracker.createInstance<AttributesContext>(_ctx, getState());
  enterRule(_localctx, 12, CHTLParser::RuleAttributes);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(99); 
    _errHandler->sync(this);
    alt = 1;
    do {
      switch (alt) {
        case 1: {
              setState(98);
              attribute();
              break;
            }

      default:
        throw NoViableAltException(this);
      }
      setState(101); 
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AttributeContext ------------------------------------------------------------------

CHTLParser::AttributeContext::AttributeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CHTLParser::AttributeContext::IDENTIFIER() {
  return getToken(CHTLParser::IDENTIFIER, 0);
}

CHTLParser::ValueContext* CHTLParser::AttributeContext::value() {
  return getRuleContext<CHTLParser::ValueContext>(0);
}

tree::TerminalNode* CHTLParser::AttributeContext::COLON() {
  return getToken(CHTLParser::COLON, 0);
}

tree::TerminalNode* CHTLParser::AttributeContext::EQUAL() {
  return getToken(CHTLParser::EQUAL, 0);
}

tree::TerminalNode* CHTLParser::AttributeContext::SEMICOLON() {
  return getToken(CHTLParser::SEMICOLON, 0);
}


size_t CHTLParser::AttributeContext::getRuleIndex() const {
  return CHTLParser::RuleAttribute;
}

void CHTLParser::AttributeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAttribute(this);
}

void CHTLParser::AttributeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAttribute(this);
}


std::any CHTLParser::AttributeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTLVisitor*>(visitor))
    return parserVisitor->visitAttribute(this);
  else
    return visitor->visitChildren(this);
}

CHTLParser::AttributeContext* CHTLParser::attribute() {
  AttributeContext *_localctx = _tracker.createInstance<AttributeContext>(_ctx, getState());
  enterRule(_localctx, 14, CHTLParser::RuleAttribute);
  size_t _la = 0;
